Closed Bug 591042 Opened 14 years ago Closed 14 years ago

validation fix in copyTexImage2D and update list of failing tests

Categories

(Core :: Graphics: CanvasWebGL, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
blocking2.0 --- final+

People

(Reporter: bjacob, Assigned: bjacob)

Details

Attachments

(1 file)

This patch:
 * makes copyTexImage2D reject NPOT sizes for level > 0
 * accordingly, removes textute-npot.html from the list of failing tests
 * also removes webGLarray.html since it's now passing.
Attachment #469600 - Flags: review?(vladimir)
blocking2.0: --- → ?
blocking2.0: ? → final+
http://hg.mozilla.org/mozilla-central/rev/a4caa27c456e
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Assignee: nobody → bjacob
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: