Bug 591042 - validation fix in copyTexImage2D and update list of failing tests - r=vladimir, a=blocking2.0